# internal/transport/adminhttp/playground_handler.go
@@ -1,0 +1,43 @@
+package adminhttp
+
+import (
+	"net/http"
+
+	adminapp "github.com/KnifeFly/token-gateway/internal/app/admin"
+)
+
+func (h *Handler) runPlayground(w http.ResponseWriter, r *http.Request, sr sessionRequest) {
+	if !h.requireMutation(w, r, sr) {
+		return
+	}
+	var request adminapp.PlaygroundRunRequest
+	if !decodeJSON(w, sr.requestID, r, &request) {
+		return
+	}
+	response, err := h.admin.RunPlayground(r.Context(), sr.actor, request, h.mutationOptions(r, sr.requestID))
+	writeResult(w, sr.requestID, response, err)
+}
+
+func (h *Handler) previewPlaygroundImport(w http.ResponseWriter, r *http.Request, sr sessionRequest) {
+	if !h.requireMutation(w, r, sr) {
+		return
+	}
+	var request adminapp.PlaygroundImportPreviewRequest
+	if !decodeJSON(w, sr.requestID, r, &request) {
+		return
+	}
+	response, err := h.admin.PreviewPlaygroundImport(r.Context(), sr.actor, request, h.mutationOptions(r, sr.requestID))
+	writeResult(w, sr.requestID, response, err)
+}
+
+func (h *Handler) exportPlayground(w http.ResponseWriter, r *http.Request, sr sessionRequest) {
+	if !h.requireMutation(w, r, sr) {
+		return
+	}
+	var request adminapp.PlaygroundExportRequest
+	if !decodeJSON(w, sr.requestID, r, &request) {
+		return
+	}
+	response, err := h.admin.ExportPlayground(r.Context(), sr.actor, request, h.mutationOptions(r, sr.requestID))
+	writeResult(w, sr.requestID, response, err)
+}
